rpled-compile/tests/pixelscripts/missing_header.out
Failed to parse pixelscript file: Parse error:
[31mError:[0m Parse error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/pixelscripts\missing_header.pxl:1:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31mf[0m[38;5;249mu[0m[38;5;249mn[0m[38;5;249mc[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249m)[0m
 [38;5;240m  │[0m [31m┬[0m  
 [38;5;240m  │[0m [31m╰[0m[31m─[0m[31m─[0m Expected identifier, but found Function
[38;5;246m───╯[0m
