rpled-compile/tests/pixelscripts/missing_header.pxl
function main()
    led.clear()
end
